# canvas-sdk-tools

./: .env.example  .gitignore  .replit  DEPLOYMENT.md  README.md  TOOLS.md  pyproject.toml  replit.nix  sedK0gdDQ
.agents/memory/: MEMORY.md  canvas-sdk-tools-reference.md  replit-port-mapping.md
.github/workflows/: test.yml
attached_assets/: Pasted-Fix-spec-for-canvas-sdk-tools-MCP-SDK-0-169-x-Issue-1-f_1782245308230.txt
docs/: REPLIT_AGENT_PROMPT.md
reference/sdk_0.163.x/: PROVENANCE.md  capability_catalog.json  fhir_rules.json  field_name_rules.json  import_allowlist.json  manifest_schema.json
reference/sdk_0.169.x/: PROVENANCE.md  capability_catalog.json  fhir_rules.json  field_name_rules.json  import_allowlist.json  manifest_schema.json
scripts/: regenerate_reference.py
src/canvas_sdk_tools/: __init__.py  __main__.py  app.py  config.py  diff.py  evidence.py  logging.py  reference.py
src/canvas_sdk_tools/tools/: __init__.py  capability.py  fhir.py  field_names.py  manifest.py  sandbox.py
tests/: conftest.py  test_app_health.py  test_capability.py  test_fhir.py  test_field_names.py  test_manifest.py  test_reference_loader.py  test_sandbox.py
tests/fixtures/bad/: fhir_mutation.py  field_traps.py  forbidden_imports.py  manifest_invalid.json
tests/fixtures/good/: handler_clean.py  manifest_valid.json
