[project]
name = "canvas-sdk-tools"
version = "0.1.0"
description = "Tier-3 Canvas-only MCP: static, offline analyzers for Canvas SDK plugin code and specs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "jsonschema>=4.21",
    "restrictedpython>=7.0",
    "uvicorn>=0.49.0",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Vendored, version-pinned SDK reference data is shipped with the package.
canvas_sdk_tools = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]
# Fixtures are intentionally incomplete code samples fed to the analyzers.
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
